@@ -29,3 +29,7 @@
 
 * 20080531: "DB_ENV->rep_elect" only works in BDB 4.7, with current code.
 
+* 20080629: Timeout value in the test_replication code is a workaround.
+  The right thing to do would be tweak the different replication timeout
+  values to avoid the race condition.
+
